Fixing Mouse Pointer, px Jump

--- a/css/master.css
+++ b/css/master.css
@@ -2200,6 +2200,12 @@ button.close {
   -webkit-appearance: none;
 }
 
+.typekit-badge {
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -ms-filter: "alpha(opacity=0)";
+}
+
 #page-wrap {
   max-width: 1200px;
   position: relative;
@@ -2208,11 +2214,15 @@ button.close {
 
 .top-bar-links {
   float: right;
-  margin-right: 100px !important;
+  margin-right: 70px !important;
+}
+
+.top-bar .top-bar-links > li > a {
+  cursor: pointer;
 }
 
 #nav-branding {
-  margin-left: 50px;
+  margin-left: 20px;
 }
 
 #nav-logo {
@@ -2361,12 +2371,14 @@ header {
 }
 .hero h1 {
   font-size: 40px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Bold";
 }
 
 p#subhero {
   margin-top: 30px;
   font-size: 18px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Light";
   color: #ffffff;
 }
@@ -2495,6 +2507,7 @@ p#subhero {
 }
 #features h1 {
   font-size: 48px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2530,9 +2543,9 @@ p#subhero {
 }
 
 #iphone-center {
-  margin-top: 60px;
-  margin-left: 80px;
-  margin-right: 80px;
+  margin-top: 61px;
+  margin-left: 79px;
+  margin-right: 81px;
   background-image: url("../images/iphone-container.png");
   display: block;
   width: 312px;
@@ -2549,7 +2562,7 @@ p#subhero {
   position: absolute;
   background-repeat: no-repeat;
   width: 469px;
-  height: 473px;
+  height: 474px;
   margin-left: -80px;
   margin-top: 90px;
   z-index: 0;
@@ -2558,10 +2571,10 @@ p#subhero {
 #app-screenshot {
   display: block;
   width: 268px;
-  height: 480px;
+  height: 474px;
   background-repeat: no-repeat;
   position: relative;
-  top: 94px;
+  top: 93px;
   left: 24px;
 }
 
@@ -2570,10 +2583,10 @@ p#subhero {
   top: 0px;
   left: 0px;
   display: block;
-  z-index: 6;
+  z-index: 0;
   opacity: 1;
   width: 268px;
-  height: 20px;
+  height: 474px;
 }
 
 #iphone {
@@ -2599,12 +2612,14 @@ p#subhero {
 }
 
 #haltestellen {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   cursor: hand;
   cursor: pointer;
   color: #a3a3a3;
 }
 #haltestellen > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2613,10 +2628,12 @@ p#subhero {
   margin-right: 20px;
   cursor: hand;
   cursor: pointer;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   color: #a3a3a3;
 }
 #datepicker > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2624,10 +2641,12 @@ p#subhero {
   margin-left: -20px;
   cursor: hand;
   cursor: pointer;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   color: #a3a3a3;
 }
 #suche > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2636,10 +2655,12 @@ p#subhero {
   margin-left: 10px;
   cursor: hand;
   cursor: pointer;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   color: #a3a3a3;
 }
 #bringmehome > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2648,10 +2669,12 @@ p#subhero {
   margin-left: 10px;
   cursor: hand;
   cursor: pointer;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   color: #a3a3a3;
 }
 #nextrbutton > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2665,6 +2688,7 @@ p#subhero {
   margin-top: 25px;
 }
 #home-close > h1 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   font-size: 24px;
   color: #a3a3a3;
@@ -2696,7 +2720,7 @@ p#subhero {
 }
 #howitworks2 #iphone2 {
   position: absolute;
-  margin: 0px auto;
+  margin-left: 1px;
   margin-top: 50px;
   display: block;
   max-width: 645px;
@@ -2707,11 +2731,6 @@ p#subhero {
   width: 645px;
   height: 638px;
   display: block;
-}
-
-#iphone-over {
-  width: 645px;
-  height: 638px;
 }
 
 #how-right2 {
@@ -2727,12 +2746,14 @@ p#subhero {
 }
 
 #verbindungen {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   cursor: hand;
   cursor: pointer;
   color: #a3a3a3;
 }
 #verbindungen > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2741,14 +2762,17 @@ p#subhero {
   margin-right: 20px;
   cursor: hand;
   cursor: pointer;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   color: #a3a3a3;
 }
 #scroll > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
 #detail {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   cursor: hand;
   cursor: pointer;
@@ -2756,16 +2780,24 @@ p#subhero {
   margin-left: 10px;
 }
 #detail > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
+}
+
+#iphone-over {
+  width: 645px;
+  height: 638px;
 }
 
 #close {
   margin-top: 70px;
   margin-left: 10px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   color: #a3a3a3;
 }
 #close > h3 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2780,6 +2812,7 @@ p#subhero {
   text-align: center;
 }
 #verbindungen-close > h1 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   font-size: 24px;
   color: #a3a3a3;
@@ -2789,11 +2822,13 @@ p#subhero {
   margin-top: 35px;
 }
 #map-text > h1 {
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   font-size: 48px;
 }
 #map-text > p {
   font-size: 18px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
   background-color: white;
 }
@@ -2816,6 +2851,8 @@ p#subhero {
 .vicon {
   width: 60px;
   height: 60px;
+  cursor: hand;
+  cursor: pointer;
 }
 
 .hicon {
@@ -2834,7 +2871,7 @@ p#subhero {
 #stations ul {
   margin-left: 0px;
   zoom: 1;
-  margin-left: 15%;
+  margin-left: 10%;
   margin-right: auto;
 }
 #stations ul > li {
@@ -2855,7 +2892,7 @@ p#subhero {
 }
 #stations ul > li {
   display: inline;
-  margin-right: 10px;
+  margin-right: 5px;
   margin-top: 10px;
 }
 #stations ul > li.hover {
@@ -2868,8 +2905,9 @@ p#subhero {
 }
 
 .hover {
-  width: 110px;
+  width: 100px;
   visibility: hidden;
+  margin-bottom: 5px;
 }
 
 #appstore {
@@ -2887,6 +2925,8 @@ p#subhero {
   width: 114px;
   height: 114px;
   background-image: url(../images/appstore-nextrbutton.png);
+  cursor: hand;
+  cursor: pointer;
   background-position: bottom;
   text-indent: -9999px;
   -webkit-transition: background-position 0s ease;
@@ -2908,12 +2948,14 @@ p#subhero {
 }
 #appstore-text > h1 {
   font-size: 30px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 #appstore-text > p {
   width: 55%;
   color: grey;
   font-size: 15px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
 }
 
@@ -2936,14 +2978,15 @@ footer {
   width: 23px;
   height: 16px;
   position: relative;
-  top: 15px;
+  top: 13px;
   left: 0px;
 }
 
 .footer-header h1 {
-  margin-left: 50px;
+  margin-left: 40px;
   color: white;
   font-size: 30px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Light";
 }
 
@@ -2951,14 +2994,24 @@ footer {
   color: white;
   font-size: 18px;
   margin-bottom: 30px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Light";
+}
+#footer-feedback > a {
+  color: white;
+  text-decoration: none;
 }
 
 #footer-claimer {
   color: black;
   font-size: 11px;
   line-height: 14px;
+  -webkit-font-smoothing: antialiased;
   font-family: "DINPro-Regular";
+}
+#footer-claimer > a {
+  color: black;
+  text-decoration: none;
 }
 
 #who {
